small footer fixes

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </div>
   </div>
   <footer class="foot-container">
-    <div class="copywright">Copywright, 2020</div>
+    <div class="copywright">Copyright, 2020</div>
     <div class="icons">
       <a href="https://facebook.com" >
         <img class="faf" src='facebook.png'>
